<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_backround"
    tools:context=".TestStartFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skipp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:fillColor="#484848"
        android:fontFamily="sans-serif"
        android:text="@string/string_skip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:fillColor="#484848"
        android:fontFamily="sans-serif"
        android:text="@string/word_test"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#484848"
        app:layout_constraintBottom_toTopOf="@id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about"
        android:layout_width="336sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/string_about"
        android:textSize="18sp"
        android:textColor="#484848"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start"
        style="@style/ButtonPinkTextStyle"
        android:layout_width="208dp"
        android:layout_height="50dp"
        android:text="@string/btn_Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/first_screen_image"
        android:layout_width="wrap_content"
        android:layout_height="227dp"
        android:layout_marginHorizontal="2dp"
        android:src="@drawable/ic_decky_first_test_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>