<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    tools:context=".WordTestFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_close"
        android:text="@string/string_skip"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/correct_number"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginStart="280dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/correct_number"
        android:textColor="#484848"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skip" />

    <!--
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        tools:text="15" />

-->
    <com.android.basi.percentageprogressbar.PercentageProgressBar
        android:id="@+id/ppb"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/linearProgressIndicator"
        app:layout_constraintEnd_toStartOf="@+id/correct_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ppb_progress="0"
        app:ppb_progress_color="#FF6C81"
        app:ppb_progress_max="20"
        app:ppb_text_color="#484848"
        app:ppb_text_size="6dp"
        app:ppb_thickness="4dp" />
    <!--
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:layout_marginTop="35dp"
            app:indicatorColor="#484848"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/linearProgressIndicator"
            app:layout_constraintEnd_toStartOf="@+id/correct_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="#FF6C81" />
    -->
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:indeterminateBehavior="repeat"
        android:max="10"
        android:progress="3"
        app:indicatorColor="#FF6C81"
        app:layout_constraintBottom_toTopOf="@+id/eng_word_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correct_number"
        app:trackColor="#54FF6C81"
        app:trackCornerRadius="50dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/eng_word_cardView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="50dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearProgressIndicator">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eng_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/eng_word"
                android:textAlignment="center"
                android:textColor="#484848"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="144dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_edge">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/word1"
                android:textAlignment="center"
                android:textColor="#00A597"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_success_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word1" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="144dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/word2"
                android:textAlignment="center"
                android:textColor="#484848"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="144dp"
        android:layout_height="194dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/word3"
                android:textAlignment="center"
                android:textColor="#484848"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="144dp"
        android:layout_height="194dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:foregroundGravity="center"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/word4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/word4"
                android:textAlignment="center"
                android:textColor="#484848"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_oval"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/word4" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

